# llm-archetype-batch-use-case

./: .env.template  .gitignore  README copy.md  README.md  pyproject.toml  schema.json  schema.yaml  schema.yml
data/input_txt/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt
src/llm_batch/: cli.py  data.py  main.py  model.py  output.py  process.py  prompt.py  schema.py
